--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_iconly: ^1.0.2
+  image_picker: ^1.0.7
+  ionicons: ^0.2.2
   provider: ^6.1.1
   shared_preferences: ^2.2.2
   shimmer: ^3.0.0
